fixed spacing on header after taking out beach

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -9,7 +9,7 @@ body {
 #headH1 {
     color: white;
     margin-top: 40px;
-    margin-left: 100px;
+    margin-left: 180px;
     font-size: 55px;
     font-family: 'Lora', serif;
     -webkit-text-stroke-width: 1px;
